# capitalreport

./: .gitignore  Dockerfile  Dockerfile-poetry  README.md  build.sh  credentials.json  docker-compose.yml  pyproject.toml  requirements.txt  verify_auth.py  verify_club_signup.py  verify_league_fix.py  verify_league_name_mandatory.py  verify_league_registration.py  verify_league_store_syntax.py  verify_leagues_names.py  verify_mandatory_fields.py  verify_match_v2.py  verify_password_rules.py  verify_player_league_details.py  verify_router.py  verify_signup.py  verify_syntax.py
app/: main.py  requirements.txt
app/agents/: .env
app/agents/gemini/: prashn_uttar_agent.py
app/agents/greeting-agent/: agent.py
app/agents/session-agent/: agent.py  stateful_session.py
app/agents/structured_agent/: agent.py
app/agents/tool-agent/: agent.py
app/agents/vertex/: prashn_uttar_agent.py  report_generation_agent.py
app/api/: hello_world.py  orchestrator_builder.py  prashn_kijiye.py  upload_documents.py
app/api/v1/: deps.py
app/services/: data_extractor.py  load_files.py  orchestrator.py  pb_league_service.py  pb_player_service.py
app/store/: chroma_db_store.py  credentials.json  gcp_file_store.py  mongo_db_store.py  pb_mongo_db_store.py  stable-smithy-270416-42ec379dd1b9.json
app/store/mongo/: pb_league_store.py  pb_match_store.py  pb_mongo_db_store.py  pb_player_store.py
app/utils/: security.py
app/vo/pb/: group.py  league.py  league_registration_payload.py  match.py  match_deatils_payload  match_details_payload.py  player.py  round.py  team.py  (+1 more)
(+32 files in other folders)
